<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.materialdesingcomponent.ScrollingActivity">

    <item
        android:id="@+id/action_employment"
        android:orderInCategory="100"
        android:title="@string/bottom_menu_title_employment"
        android:icon="@drawable/ic_work_outline_24"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_degree"
        android:orderInCategory="200"
        android:title="@string/bottom_menu_title_degree"
        android:icon="@drawable/ic_degree_24"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_course"
        android:orderInCategory="300"
        android:title="@string/bottom_menu_title_course"
        android:icon="@drawable/ic_courses_24"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="300"
        android:title="@string/bottom_menu_title_profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="never"/>



</menu>