<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:paddingHorizontal="@dimen/size_8"
    tools:context=".Presentation.Employment.Fragments.CreateEmploymentFragment">
<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_company"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/cardView_background"
            android:layout_marginTop="@dimen/size_8"
            android:src="@drawable/ic_add_a_photo_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_work_position"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_position"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_text_length"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_company"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_work_position"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_text_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_company"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_text_length"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_work_position"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_text_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company_address"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_company_address"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_text_address_length"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_company_name"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textCapWords"
                android:maxLength="@integer/counter_max_text_address_length" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_time_on_job"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_time_on_job"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_text_time"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_company_address"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_time_on_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:maxLength="@integer/counter_max_text_time" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_job_description"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_job_description"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_long_text"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_time_on_job"
            app:startIconDrawable="@drawable/ic_edit_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_job_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="@integer/counter_max_long_text"
                android:minLines="@integer/min_lines"
                android:scrollbarAlwaysDrawHorizontalTrack="true"
                android:scrollbarAlwaysDrawVerticalTrack="true" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_company_web"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_8"
            android:hint="@string/add_employment_hint_company_web"
            app:counterEnabled="true"
            app:counterMaxLength="@integer/counter_max_web_url"
            app:endIconMode="clear_text"
            app:helperText="@string/required"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/til_job_description"
            app:startIconDrawable="@drawable/ic_insert_link_24">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_company_web"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:maxLength="@integer/counter_max_long_text" />
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>